--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Main from "../components/Main";
+import Minigame from "../components/Minigame";
+import Projects from "../components/Projects";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -12,6 +14,9 @@ import Layout from "../layouts/Layout.astro";
       >
     </h1>
   </main> -->
-  <Main client:visible />
-  <section class="h-[50vh] bg-green-400 w-full"></section>
+  <div class="relative min-h-screen">
+    <Main client:load />
+    <Minigame client:visible />
+    <Projects client:visible />
+  </div>
 </Layout>
