--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Main from "../components/Main";
 import Minigame from "../components/Minigame";
-import Projects from "../components/Projects";
+import Projects from "../components/Projects.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -14,9 +14,9 @@ import Layout from "../layouts/Layout.astro";
       >
     </h1>
   </main> -->
-  <div class="relative min-h-screen">
+  <div class="relative min-h-screen md:p-10">
     <Main client:load />
     <Minigame client:visible />
-    <Projects client:visible />
+    <Projects />
   </div>
 </Layout>
