better colors and general fixes

--- a/src/components/Frame.astro
+++ b/src/components/Frame.astro
@@ -48,7 +48,7 @@ import IconLink from "./IconLink.astro";
 
 <div class="min-h-screen h-0">
   <div class="hidden md:block">
-    <div id="frame-1" class="z-40 fixed bg-white top-0 left-0 w-full h-10">
+    <div id="frame-1" class="z-40 fixed bg-light top-0 left-0 w-full h-10">
       <div class="flex mx-10 items-center h-full">
         <a
           onclick="window.scrollTo({ top: 0, behavior: 'smooth' })"
@@ -58,10 +58,10 @@ import IconLink from "./IconLink.astro";
         </a>
       </div>
     </div>
-    <div id="frame-2" class="z-40 fixed bg-white bottom-0 left-0 w-full h-10">
+    <div id="frame-2" class="z-40 fixed bg-light bottom-0 left-0 w-full h-10">
     </div>
-    <div class="z-40 fixed bg-white top-0 bottom-0 left-0 w-10 h-full"></div>
-    <div class="z-40 fixed bg-white top-0 bottom-0 right-0 w-10 h-full">
+    <div class="z-40 fixed bg-light top-0 bottom-0 left-0 w-10 h-full"></div>
+    <div class="z-40 fixed bg-light top-0 bottom-0 right-0 w-10 h-full">
       <div
         class="flex flex-col justify-center gap-4 my-10 items-center w-full h-[calc(100%-5rem)]"
       >
