--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -13,7 +13,7 @@ const {
 ---
 
 <a
-  class="group relative aspect-[4/3] overflow-hidden"
+  class="group relative aspect-[4/3] overflow-hidden h-full"
   href={link}
   rel="follow"
   target="_blank"
