--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import testImage from "../project-images/test.webp";
 ---
 
 <section
-  class="relative flex flex-col items-center z-20 bg-[#f8f8f8] min-h-fit"
+  class="dots [--dots-color:#f0f0f0] relative flex flex-col items-center z-20 bg-second-light min-h-fit"
 >
   <h2
     class="font-secondary md:text-4xl text-2xl italic font-normal py-20 md:py-36"
@@ -12,7 +12,7 @@ import testImage from "../project-images/test.webp";
     Projects
   </h2>
   <div
-    class="grid w-full bg-red-400 grid-cols-1 md:grid-cols-2 xl:grid-cols-3 auto-rows-fr"
+    class="grid w-full grid-cols-1 md:grid-cols-2 xl:grid-cols-3 auto-rows-fr"
   >
     {
       /* {data.map((project) => (
