--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,40 @@ const { title } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+
+    <meta
+      name="description"
+      content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
+    />
+    <meta
+      name="keywords"
+      content="software engineer, frontend developer,developer, frontend, portfolio, projects, web development, react, astro, tailwind"
+    />
+    <meta name="author" content="Agustin Benvenuto" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="title" content="Agustin Benvenuto | Portfolio" />
+
+    <meta property="og:title" content="Agustin Benvenuto | Portfolio" />
+    <meta
+      property="og:description"
+      content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://agustinbenvenuto.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@abenve" />
+    <meta name="twitter:creator" content="@abenve" />
+    <meta name="twitter:title" content="Agustin Benvenuto | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
+    />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:image:alt" content="Agustin Benvenuto | Portfolio" />
+
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
@@ -26,15 +60,6 @@ const { title } = Astro.props;
   </body>
 </html>
 <style is:global>
-  :root {
-    --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      #da62c4 30%,
-      white 60%
-    );
-  }
   html {
     background-color: #f6f6f6;
     margin: 0;
