responsive fixes and add welcome animation

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -22,7 +22,7 @@ const {
   <img
     class="w-full z-10 h-full object-cover"
     src={`${image}`}
-    alt="project image"
+    alt={`${title} project image`}
   />
 
   <div
