--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,9 @@
 ---
 import Frame from "../components/Frame.astro";
-import "@fontsource/outfit";
+import "@fontsource/lato/400.css";
+import "@fontsource/lato/900.css";
 import "@fontsource/bitter";
+import WelcomeAnimation from "../components/WelcomeAnimation";
 
 export interface Props {
   title: string;
@@ -53,10 +55,18 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <Frame>
-      <slot />
-    </Frame>
+  <script>
+    window.onbeforeunload = function () {
+      window.scrollTo(0, 0);
+    };
+  </script>
+  <body class="relative">
+    <WelcomeAnimation client:load />
+    <div class="w-full h-full z-60">
+      <Frame>
+        <slot />
+      </Frame>
+    </div>
   </body>
 </html>
 <style is:global>
@@ -65,6 +75,11 @@ const { title } = Astro.props;
     margin: 0;
     padding: 0;
     height: 100%;
+  }
+
+  ::selection {
+    background-color: #fff261;
+    color: #222222;
   }
 
   ::-webkit-scrollbar {
