try to fix color problems

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,7 +4,7 @@ import projects from "../../projects/projects.json";
 ---
 
 <section
-  class="dots [--dots-color:#f0f0f0] relative flex flex-col items-center z-20 bg-second-light min-h-fit"
+  class="dots [--dots-color:#f0f0f0] [--dots-bg-color:#f8f8f8] relative flex flex-col items-center z-20 bg-second-light min-h-fit"
 >
   <h2
     class="font-secondary md:text-4xl text-2xl italic font-normal py-20 md:py-36"
