add project images and title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Projects from "../components/Projects.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to my portfolio">
+<Layout title="Agustib Benvenuto | Portfolio">
   <div class="relative min-h-screen md:p-10">
     <Main client:load />
     <Minigame />
