fix og_image misspeling

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title } = Astro.props;
       property="og:description"
       content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
     />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:image" content="/og_image.jpg" />
     <meta property="og:url" content="https://agustinbenvenuto.com" />
     <meta property="og:type" content="website" />
 
@@ -48,7 +48,7 @@ const { title } = Astro.props;
       name="twitter:description"
       content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
     />
-    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:image" content="/og_image.jpg" />
     <meta name="twitter:image:alt" content="Agustin Benvenuto | Portfolio" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
