add correct url

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,20 +36,27 @@ const { title } = Astro.props;
       property="og:description"
       content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
     />
-    <meta property="og:image" content="/og_image.jpg" />
-    <meta property="og:url" content="https://agustinbenvenuto.com" />
+    <meta property="og:image" content="https://abenve.ar/og_image.jpg" />
+    <meta property="og:image:alt" content="Agustin Benvenuto | Portfolio" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:url" content="https://abenve.ar" />
     <meta property="og:type" content="website" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@abenve" />
     <meta name="twitter:creator" content="@abenve" />
     <meta name="twitter:title" content="Agustin Benvenuto | Portfolio" />
+    <meta property="twitter:image:type" content="image/jpeg" />
     <meta
       name="twitter:description"
       content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
     />
-    <meta name="twitter:image" content="/og_image.jpg" />
+    <meta name="twitter:image" content="https://abenve.ar/og_image.jpg" />
     <meta name="twitter:image:alt" content="Agustin Benvenuto | Portfolio" />
+    <meta property="twitter:image:width" content="1200" />
+    <meta property="twitter:image:height" content="630" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
