--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props;
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="title" content="Agustin Benvenuto | Portfolio" />
-
+    <meta name="canonical" content="https://abenve.ar" />
     <meta property="og:title" content="Agustin Benvenuto | Portfolio" />
     <meta
       property="og:description"
