some lighthouse and css changes

--- a/src/components/Frame.astro
+++ b/src/components/Frame.astro
@@ -53,6 +53,7 @@ import IconLink from "./IconLink.astro";
         <a
           onclick="window.scrollTo({ top: 0, behavior: 'smooth' })"
           class="cursor-pointer"
+          rel="home"
         >
           <Icon name="logo" class="w-8" />
         </a>
