--- a/src/components/IconLink.astro
+++ b/src/components/IconLink.astro
@@ -6,6 +6,7 @@ const { href } = Astro.props;
   class="group relative flex items-center justify-center h-8 w-8 rounded-full bg-neutral-300 bg-opacity-0 hover:bg-opacity-30 transition-[opacity] ease-in-out duration-300"
   href={href}
   target="_blank"
+  rel="noopener noreferrer"
 >
   <div
     class="absolute group-focus:h-0 group-hover:opacity-0 group-focus:opacity-0 transition-[opacity] ease-in-out duration-300"
