--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -55,7 +55,7 @@ const {
   </div>
 
   <div
-    class="absolute inset-0 translate-y-[100%] group-hover:translate-y-[0%] transition duration-300 ease-in-out z-20"
+    class="absolute inset-0 translate-y-[100%] group-hover:translate-y-[0%] transition duration-300 ease-principal z-20"
     style={{
       backgroundColor: `${bgColor}`,
     }}
