--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,6 +58,7 @@ const { title } = Astro.props;
     <meta property="twitter:image:width" content="1200" />
     <meta property="twitter:image:height" content="630" />
 
+    <link rel="preconnect" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
