--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,13 +45,12 @@ const { title } = Astro.props;
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@abenve" />
-    <meta name="twitter:creator" content="@abenve" />
+    <meta name="twitter:creator" content="@ByBenve" />
     <meta name="twitter:title" content="Agustin Benvenuto | Portfolio" />
     <meta property="twitter:image:type" content="image/jpeg" />
     <meta
       name="twitter:description"
-      content="Agustin Benvenuto, software engineer student portfolio, showing some web projects and contact information."
+      content="Agustin Benvenuto, software engineer student portfolio showing some web projects and contact information."
     />
     <meta name="twitter:image" content="https://abenve.ar/og_image.jpg" />
     <meta name="twitter:image:alt" content="Agustin Benvenuto | Portfolio" />
@@ -59,7 +58,7 @@ const { title } = Astro.props;
     <meta property="twitter:image:height" content="630" />
 
     <link rel="preconnect" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
 
